--- a/packages/plasma-ui/package.json
+++ b/packages/plasma-ui/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "@salutejs/plasma-core": "1.195.0",
+    "@salutejs/plasma-new-hope": "0.320.0",
     "@salutejs/plasma-typo": "0.42.0",
     "color": "3.1.2",
     "lodash.throttle": "4.1.1",
@@ -33,9 +34,16 @@
     "@babel/preset-env": "7.24.4",
     "@babel/preset-react": "7.24.1",
     "@babel/preset-typescript": "7.24.1",
+    "@ironkinoko/rollup-plugin-styles": "4.0.3",
+    "@linaria/core": "5.0.2",
+    "@linaria/react": "5.0.3",
+    "@linaria/rollup": "5.0.4",
+    "@rollup/plugin-babel": "6.0.4",
+    "@rollup/plugin-node-resolve": "15.2.3",
+    "@rollup/pluginutils": "5.1.0",
     "@salutejs/plasma-cy-utils": "0.126.0",
     "@salutejs/plasma-icons": "1.216.0",
-    "@salutejs/plasma-sb-utils": "0.195.0",
+    "@salutejs/plasma-sb-utils": "0.196.0",
     "@salutejs/plasma-tokens": "1.111.0",
     "@salutejs/use-virtual": "2.0.0",
     "@storybook/addon-docs": "7.6.17",
@@ -54,6 +62,7 @@
     "@types/resize-observer-browser": "0.1.7",
     "@types/styled-components": "5.1.0",
     "@vitejs/plugin-react": "3.1.0",
+    "@wyw-in-js/rollup": "0.5.4",
     "babel-loader": "8.2.2",
     "babel-plugin-annotate-pure-calls": "0.4.0",
     "babel-plugin-styled-components": "1.13.2",
@@ -63,6 +72,8 @@
     "jest-styled-components": "7.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rollup": "3.28.0",
+    "rollup-plugin-css-only": "4.5.2",
     "storybook": "7.6.17",
     "styled-components": "5.3.1",
     "ts-jest": "27.0.5",
@@ -76,10 +87,13 @@
   "scripts": {
     "prepare": "npm run build",
     "prebuild": "rm -rf ./components ./es ./helpers ./hocs ./hooks ./mixins ./tokens ./types ./utils index.d.ts index.d.ts.map index.js index.js.map",
-    "build": "npm run build:cjs && npm run build:esm",
+    "build": "npm run build:cjs && npm run build:esm && npm run build:css",
     "postbuild": "tsc --outDir . --emitDeclarationOnly",
     "build:cjs": "BABEL_ENV=cjs SC_NAMESPACE=plasma-ui babel ./src --out-dir . --extensions .ts,.tsx",
     "build:esm": "BABEL_ENV=esm SC_NAMESPACE=plasma-ui babel ./src --out-dir ./es --extensions .ts,.tsx",
+    "prebuild:css": "rm -rf ./css/es ./css/cjs ./src-linaria-temp && node ./scripts/replace-imports.js",
+    "build:css": "BABEL_ENV=esm SC_NAMESPACE=plasma-ui rollup -c",
+    "postbuild:css": "rm -rf ./src-linaria-temp",
     "storybook": "storybook dev -p ${PORT:-6006} -c .storybook",
     "storybook:build": "storybook build -c .storybook -o build-sb --quiet",
     "storybook:serve": "http-server ./build-sb -c-1 -p 3000",
