--- a/packages/plasma-new-hope/package.json
+++ b/packages/plasma-new-hope/package.json
@@ -105,7 +105,6 @@
     "react-dom": "18.2.0",
     "rollup": "^3.28.0",
     "storybook": "7.6.17",
-    "styled-components": "5.3.1",
     "vite": "4.5.3"
   },
   "dependencies": {
@@ -130,7 +129,8 @@
     "react-draggable": "4.4.3",
     "react-number-format": "5.4.3",
     "react-popper": "2.3.0",
-    "storeon": "3.1.5"
+    "storeon": "3.1.5",
+    "styled-components": "5.3.1"
   },
   "sideEffects": [
     "*.css"
