--- a/website/plasma-theme-builder/package.json
+++ b/website/plasma-theme-builder/package.json
@@ -23,6 +23,7 @@
     "prettier": "^2.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.26.1",
     "react-scripts": "4.0.0",
     "styled-components": "^5.3.3"
   },
