--- a/packages/plasma-new-hope/package.json
+++ b/packages/plasma-new-hope/package.json
@@ -82,12 +82,12 @@
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@salutejs/plasma-sb-utils": "0.195.0",
     "@salutejs/plasma-themes": "0.31.0",
-    "@storybook/addon-docs": "^7.6.17",
-    "@storybook/addon-essentials": "^7.6.17",
-    "@storybook/addons": "^7.6.17",
-    "@storybook/react": "^7.6.17",
-    "@storybook/react-vite": "7.6.17",
-    "@storybook/theming": "^7.6.17",
+    "@storybook/addon-docs": "8.6.12",
+    "@storybook/addon-essentials": "8.6.12",
+    "@storybook/manager-api": "8.6.12",
+    "@storybook/react": "8.6.12",
+    "@storybook/react-vite": "8.6.12",
+    "@storybook/theming": "8.6.12",
     "@types/lodash": "^4.14.191",
     "@types/lodash.chunk": "4.2.9",
     "@types/lodash.throttle": "4.1.6",
@@ -104,7 +104,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rollup": "^3.28.0",
-    "storybook": "7.6.17",
+    "storybook": "8.6.12",
     "styled-components": "5.3.1",
     "vite": "4.5.3"
   },
