--- a/packages/plasma-tokens/package.json
+++ b/packages/plasma-tokens/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-tokens",
-  "version": "1.110.0-dev.0",
+  "version": "1.110.0",
   "description": "plasma-tokens package",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -43,8 +43,8 @@
   "devDependencies": {
     "@diez/web-sdk-common": "10.6.0",
     "@salutejs/plasma-colors": "0.15.0",
-    "@salutejs/plasma-tokens-utils": "0.47.0-dev.0",
-    "@salutejs/plasma-typo": "0.42.0-dev.0",
+    "@salutejs/plasma-tokens-utils": "0.47.0",
+    "@salutejs/plasma-typo": "0.42.0",
     "@types/node": "16.7.13",
     "jsdom": "17.0.0",
     "jsdom-global": "3.0.2",
