--- a/packages/plasma-web/package.json
+++ b/packages/plasma-web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-web",
-  "version": "1.549.0-dev.0",
+  "version": "1.549.0",
   "description": "Salute Design System / React UI kit for web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -19,14 +19,14 @@
     "directory": "packages/plasma-web"
   },
   "dependencies": {
-    "@salutejs/plasma-core": "1.193.0-dev.0",
-    "@salutejs/plasma-hope": "1.335.0-dev.0",
-    "@salutejs/plasma-new-hope": "0.291.0-dev.0",
-    "@salutejs/plasma-themes": "0.30.0-dev.0",
-    "@salutejs/plasma-tokens-b2b": "1.47.0-dev.0",
-    "@salutejs/plasma-tokens-b2c": "0.58.0-dev.0",
-    "@salutejs/plasma-tokens-web": "1.63.0-dev.0",
-    "@salutejs/plasma-typo": "0.42.0-dev.0"
+    "@salutejs/plasma-core": "1.193.0",
+    "@salutejs/plasma-hope": "1.335.0",
+    "@salutejs/plasma-new-hope": "0.291.0",
+    "@salutejs/plasma-themes": "0.30.0",
+    "@salutejs/plasma-tokens-b2b": "1.47.0",
+    "@salutejs/plasma-tokens-b2c": "0.58.0",
+    "@salutejs/plasma-tokens-web": "1.63.0",
+    "@salutejs/plasma-typo": "0.42.0"
   },
   "peerDependencies": {
     "@salutejs/plasma-icons": "^1.0.0",
@@ -49,9 +49,9 @@
     "@rollup/plugin-commonjs": "25.0.7",
     "@rollup/plugin-node-resolve": "15.2.3",
     "@salutejs/plasma-colors": "0.15.0",
-    "@salutejs/plasma-cy-utils": "0.124.0-dev.0",
-    "@salutejs/plasma-icons": "1.214.0-dev.0",
-    "@salutejs/plasma-sb-utils": "0.193.0-dev.0",
+    "@salutejs/plasma-cy-utils": "0.124.0",
+    "@salutejs/plasma-icons": "1.214.0",
+    "@salutejs/plasma-sb-utils": "0.193.0",
     "@storybook/addon-docs": "7.6.17",
     "@storybook/addon-essentials": "7.6.17",
     "@storybook/addons": "7.6.17",
