--- a/packages/sdds-dfa/package.json
+++ b/packages/sdds-dfa/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-dfa",
-  "version": "0.277.0-dev.0",
+  "version": "0.277.0",
   "description": "Salute Design System / React UI kit for SDDS DFA web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -19,8 +19,8 @@
     "directory": "packages/sdds-dfa"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.291.0-dev.0",
-    "@salutejs/sdds-themes": "0.33.0-dev.0"
+    "@salutejs/plasma-new-hope": "0.291.0",
+    "@salutejs/sdds-themes": "0.33.0"
   },
   "peerDependencies": {
     "react": ">=16.13.1",
@@ -37,10 +37,10 @@
     "@babel/preset-typescript": "7.24.1",
     "@microsoft/api-extractor": "7.38.3",
     "@salutejs/plasma-colors": "0.15.0",
-    "@salutejs/plasma-core": "1.193.0-dev.0",
-    "@salutejs/plasma-cy-utils": "0.124.0-dev.0",
-    "@salutejs/plasma-icons": "1.214.0-dev.0",
-    "@salutejs/plasma-sb-utils": "0.193.0-dev.0",
+    "@salutejs/plasma-core": "1.193.0",
+    "@salutejs/plasma-cy-utils": "0.124.0",
+    "@salutejs/plasma-icons": "1.214.0",
+    "@salutejs/plasma-sb-utils": "0.193.0",
     "@storybook/addon-docs": "7.6.17",
     "@storybook/addon-essentials": "7.6.17",
     "@storybook/addons": "7.6.17",
