--- a/utils/plasma-tokens-utils/package.json
+++ b/utils/plasma-tokens-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-tokens-utils",
-  "version": "0.47.0-dev.0",
+  "version": "0.47.0",
   "description": "Code shared between token libraries.",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "@salutejs/plasma-colors": "0.15.0",
-    "@salutejs/plasma-typo": "0.42.0-dev.0",
+    "@salutejs/plasma-typo": "0.42.0",
     "@theme-ui/css": "0.3.1",
     "color": "^4.2.3",
     "csstype": "3.0.3",
