--- a/website/plasma-giga-docs/package.json
+++ b/website/plasma-giga-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-giga-docs",
-  "version": "0.68.0-dev.0",
+  "version": "0.68.0",
   "description": "PLASMA GIGA documentation",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -30,11 +30,11 @@
     "@docusaurus/preset-classic": "3.6.1",
     "@docusaurus/theme-live-codeblock": "3.6.1",
     "@mdx-js/react": "3.0.0",
-    "@salutejs/plasma-docs-ui": "0.460.0-dev.0",
-    "@salutejs/plasma-giga": "0.274.0-dev.0",
-    "@salutejs/plasma-icons": "1.214.0-dev.0",
-    "@salutejs/plasma-themes": "0.30.0-dev.0",
-    "@salutejs/plasma-typo": "0.42.0-dev.0",
+    "@salutejs/plasma-docs-ui": "0.460.0",
+    "@salutejs/plasma-giga": "0.274.0",
+    "@salutejs/plasma-icons": "1.214.0",
+    "@salutejs/plasma-themes": "0.30.0",
+    "@salutejs/plasma-typo": "0.42.0",
     "@svgr/webpack": "8.1.0",
     "clsx": "^1.1.1",
     "file-loader": "^6.2.0",
