--- a/packages/plasma-new-hope/package.json
+++ b/packages/plasma-new-hope/package.json
@@ -126,6 +126,7 @@
     "rc-tree": "5.11.0",
     "rc-virtual-list": "3.18.1",
     "react-draggable": "4.4.3",
+    "react-number-format": "5.4.3",
     "react-popper": "2.3.0",
     "storeon": "3.1.5"
   },
