--- a/packages/plasma-icons/.babelrc
+++ b/packages/plasma-icons/.babelrc
@@ -18,7 +18,7 @@
         "@babel/preset-react",
         "@babel/preset-typescript",
         [
-            "@linaria/babel-preset",
+            "@wyw-in-js/babel-preset",
             {
                 "evaluate": true,
                 "displayName": true
