--- a/packages/sdds-serv/package.json
+++ b/packages/sdds-serv/package.json
@@ -54,10 +54,8 @@
     "@emotion/react": ">=11",
     "@emotion/styled": ">=11",
     "@ironkinoko/rollup-plugin-styles": "^4.0.3",
-    "@linaria/core": "5.0.2",
-    "@linaria/react": "5.0.3",
-    "@linaria/rollup": "5.0.4",
-    "@linaria/vite": "5.0.4",
+    "@linaria/core": "6.2.0",
+    "@linaria/react": "6.2.1",
     "@microsoft/api-extractor": "7.38.3",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^25.0.4",
@@ -78,6 +76,8 @@
     "@types/react-dom": "18.0.11",
     "@types/styled-components": "5.1.0",
     "@vitejs/plugin-react": "3.1.0",
+    "@wyw-in-js/rollup": "0.5.5",
+    "@wyw-in-js/vite": "0.5.5",
     "babel-loader": "8.2.2",
     "babel-plugin-annotate-pure-calls": "0.4.0",
     "babel-plugin-styled-components": "1.13.2",
