--- a/packages/plasma-new-hope/package.json
+++ b/packages/plasma-new-hope/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-new-hope",
-  "version": "0.291.2-dev.0",
+  "version": "0.291.3-dev.0",
   "description": "Salute Design System blueprint",
   "main": "cjs/index.js",
   "module": "es/index.js",
@@ -80,7 +80,7 @@
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-node-resolve": "^15.1.0",
-    "@salutejs/plasma-sb-utils": "0.193.0",
+    "@salutejs/plasma-sb-utils": "0.193.1-dev.0",
     "@salutejs/plasma-themes": "0.30.0",
     "@storybook/addon-docs": "^7.6.17",
     "@storybook/addon-essentials": "^7.6.17",
@@ -116,7 +116,7 @@
     "@linaria/react": "5.0.3",
     "@popperjs/core": "2.11.8",
     "@salutejs/input-core": "2.1.2",
-    "@salutejs/plasma-core": "1.193.0",
+    "@salutejs/plasma-core": "1.193.1-dev.0",
     "@salutejs/react-maskinput": "3.2.6",
     "classnames": "2.5.1",
     "dayjs": "1.11.11",
