--- a/packages/plasma-tokens-web/package.json
+++ b/packages/plasma-tokens-web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-tokens-web",
-  "version": "1.63.0",
+  "version": "1.63.1-dev.0",
   "description": "",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
