--- a/website/plasma-theme-builder/package.json
+++ b/website/plasma-theme-builder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-theme-builder",
-  "version": "1.401.2-dev.0",
+  "version": "1.401.3-dev.0",
   "description": "Plasma Theme Builder.",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "private": true,
@@ -10,13 +10,13 @@
     "lint": "../../node_modules/.bin/eslint ./src --ext .ts,.tsx --quiet"
   },
   "dependencies": {
-    "@salutejs/plasma-b2c": "1.547.2-dev.0",
+    "@salutejs/plasma-b2c": "1.547.3-dev.0",
     "@salutejs/plasma-colors": "0.15.0",
     "@salutejs/plasma-icons": "1.214.0",
-    "@salutejs/plasma-tokens-b2b": "1.47.0",
-    "@salutejs/plasma-tokens-b2c": "0.58.0",
+    "@salutejs/plasma-tokens-b2b": "1.47.1-dev.0",
+    "@salutejs/plasma-tokens-b2c": "0.58.1-dev.0",
     "@salutejs/plasma-tokens-utils": "0.47.0",
-    "@salutejs/plasma-tokens-web": "1.63.0",
+    "@salutejs/plasma-tokens-web": "1.63.1-dev.0",
     "@salutejs/plasma-typo": "0.42.0",
     "jszip": "^3.10.1",
     "octokit": "^1.7.1",
