--- a/website/plasma-website/package.json
+++ b/website/plasma-website/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-website",
-  "version": "0.511.2-dev.0",
+  "version": "0.511.3-dev.0",
   "description": "Plasma Main App",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -19,11 +19,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@salutejs/plasma-b2c": "1.547.2-dev.0",
+    "@salutejs/plasma-b2c": "1.547.3-dev.0",
     "@salutejs/plasma-colors": "0.15.0",
     "@salutejs/plasma-icons": "1.214.0",
     "@salutejs/plasma-tokens": "1.110.0",
-    "@salutejs/plasma-tokens-b2c": "0.58.0",
+    "@salutejs/plasma-tokens-b2c": "0.58.1-dev.0",
     "@salutejs/plasma-typo": "0.42.0",
     "@zeit/next-css": "^1.0.1",
     "contrast-ratio-checker": "^1.1.7",
