fix(plasma-new-hope): set correct path to exclude stories

--- a/packages/plasma-new-hope/tsconfig.json
+++ b/packages/plasma-new-hope/tsconfig.json
@@ -38,5 +38,5 @@
         "rootDir": "./src"
     },
     "include": ["./src"],
-    "exclude": ["./src/helpers", "./src/**/*.stories.tsx", "./src/**/*.component-test.tsx"]
+    "exclude": ["./src/helpers", "./src/examples/", "./src/**/*.component-test.tsx"]
 }
