chore(plasma-theme-builder): Fix version

--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,12 @@
 {
-    "packages": ["packages/*", "packages/themes/*", "utils/*", "website/*", "actions/platform-test"],
+    "packages": [
+        "packages/*",
+        "packages/themes/*",
+        "utils/*",
+        "website/*-docs",
+        "website/plasma-website",
+        "actions/platform-test"
+    ],
     "version": "independent",
     "ignoreChanges": ["*.md", "*.component-test.tsx", "package-lock.json"],
     "loglevel": "verbose",
