--- a/.github/workflows/theme-builder-deploy-demo.yml
+++ b/.github/workflows/theme-builder-deploy-demo.yml
@@ -23,9 +23,9 @@ jobs:
         run: mkdir -p s3_build
 
       # TODO: https://github.com/salute-developers/plasma/issues/255
-      - name: Lerna bootstrap with scope
+      - name: Npm install
         run: | 
-          npx lerna bootstrap --scope @salutejs/plasma-theme-builder --scope=@salutejs/plasma-{tokens,tokens-utils}
+          npm install --prefix="./website/plasma-theme-builder"
 
       # 2 папки, так как названия разные - в первом случае нужно для replace
       - name: Build Theme Builder
