--- a/packages/plasma-new-hope/package.json
+++ b/packages/plasma-new-hope/package.json
@@ -118,6 +118,8 @@
     "@salutejs/input-core": "2.1.2",
     "@salutejs/plasma-core": "1.194.0",
     "@salutejs/react-maskinput": "3.2.6",
+    "@tanstack/react-table": "8.21.2",
+    "@tanstack/react-virtual": "3.13.2",
     "classnames": "2.5.1",
     "dayjs": "1.11.11",
     "focus-visible": "5.2.0",
