--- a/.github/workflows/documentation-deploy-common.yml
+++ b/.github/workflows/documentation-deploy-common.yml
@@ -137,6 +137,8 @@ jobs:
 
             -   name: Build documentation - "${{ matrix.package }}"
                 if: ${{ fromJSON(env.HAS_PACKAGE_DOCS) }}
+                env:
+                    NODE_OPTIONS: "--max_old_space_size=5010"
                 run: |
                     npm run build --prefix="./website/${{ matrix.package }}-docs" -- --no-minify
                     cp -R ./website/${{ matrix.package }}-docs/build ./s3_local_docs_build/${{ env.SHORT_NAME }}
