--- a/.github/workflows/documentation-deploy-release-branch.yml
+++ b/.github/workflows/documentation-deploy-release-branch.yml
@@ -130,6 +130,8 @@ jobs:
       
       -   name: Build documentation - "${{ matrix.package }}"
           if: ${{ fromJSON(env.HAS_PACKAGE_DOCS) }}
+          env:
+            NODE_OPTIONS: "--max_old_space_size=5010"
           run: |
             npm run build --prefix="./website/${{ matrix.package }}-docs" -- --no-minify
             cp -R ./website/${{ matrix.package }}-docs/build ./s3_build/${PR_NAME}/${{ env.SHORT_NAME }}
