--- a/packages/plasma-asdk/package.json
+++ b/packages/plasma-asdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-asdk",
-  "version": "0.324.0-dev.0",
+  "version": "0.324.0",
   "description": "Salute Design System / React UI kit for Assistant web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -19,9 +19,9 @@
     "directory": "packages/plasma-asdk"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.310.0-dev.0",
+    "@salutejs/plasma-new-hope": "0.310.0",
     "@salutejs/plasma-tokens": "1.110.0",
-    "@salutejs/plasma-tokens-b2b": "1.47.1-dev.0",
+    "@salutejs/plasma-tokens-b2b": "1.48.0",
     "@salutejs/plasma-typo": "0.42.0"
   },
   "peerDependencies": {
@@ -39,10 +39,10 @@
     "@babel/preset-typescript": "7.24.1",
     "@microsoft/api-extractor": "7.38.3",
     "@salutejs/plasma-colors": "0.15.0",
-    "@salutejs/plasma-core": "1.193.1-dev.0",
-    "@salutejs/plasma-cy-utils": "0.124.1-dev.0",
+    "@salutejs/plasma-core": "1.194.0",
+    "@salutejs/plasma-cy-utils": "0.125.0",
     "@salutejs/plasma-icons": "1.214.0",
-    "@salutejs/plasma-sb-utils": "0.194.0-dev.0",
+    "@salutejs/plasma-sb-utils": "0.194.0",
     "@storybook/addon-docs": "7.6.17",
     "@storybook/addon-essentials": "7.6.17",
     "@storybook/addons": "7.6.17",
