--- a/packages/sdds-cs/package.json
+++ b/packages/sdds-cs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-cs",
-  "version": "0.302.0-dev.0",
+  "version": "0.302.0",
   "description": "Salute Design System / React UI kit for SDDS CS web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -30,7 +30,7 @@
     "directory": "packages/sdds-cs"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.310.0-dev.0",
+    "@salutejs/plasma-new-hope": "0.310.0",
     "@salutejs/sdds-themes": "0.33.0"
   },
   "peerDependencies": {
@@ -54,10 +54,10 @@
     "@microsoft/api-extractor": "7.38.3",
     "@originjs/vite-plugin-commonjs": "1.0.3",
     "@salutejs/plasma-colors": "0.15.0",
-    "@salutejs/plasma-core": "1.193.1-dev.0",
-    "@salutejs/plasma-cy-utils": "0.124.1-dev.0",
+    "@salutejs/plasma-core": "1.194.0",
+    "@salutejs/plasma-cy-utils": "0.125.0",
     "@salutejs/plasma-icons": "1.214.0",
-    "@salutejs/plasma-sb-utils": "0.194.0-dev.0",
+    "@salutejs/plasma-sb-utils": "0.194.0",
     "@storybook/addon-docs": "7.6.17",
     "@storybook/addon-essentials": "7.6.17",
     "@storybook/addons": "7.6.17",
