--- a/utils/plasma-cy-utils/package.json
+++ b/utils/plasma-cy-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-cy-utils",
-  "version": "0.124.1-dev.0",
+  "version": "0.125.0",
   "description": "Test helpers shared between ui libraries.",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -27,9 +27,9 @@
   "devDependencies": {
     "@cypress/react": "5.10.1",
     "@salutejs/plasma-tokens": "1.110.0",
-    "@salutejs/plasma-tokens-b2b": "1.47.1-dev.0",
-    "@salutejs/plasma-tokens-b2c": "0.58.1-dev.0",
-    "@salutejs/plasma-tokens-web": "1.63.1-dev.0",
+    "@salutejs/plasma-tokens-b2b": "1.48.0",
+    "@salutejs/plasma-tokens-b2c": "0.59.0",
+    "@salutejs/plasma-tokens-web": "1.64.0",
     "@salutejs/plasma-typo": "0.42.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
