--- a/packages/plasma-new-hope/package.json
+++ b/packages/plasma-new-hope/package.json
@@ -75,8 +75,6 @@
     "@emotion/react": "11.11.4",
     "@emotion/styled": "11.11.5",
     "@ironkinoko/rollup-plugin-styles": "^4.0.3",
-    "@linaria/rollup": "5.0.4",
-    "@linaria/vite": "5.0.4",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-node-resolve": "^15.1.0",
@@ -96,6 +94,8 @@
     "@types/react-dom": "18.0.11",
     "@types/styled-components": "5.1.0",
     "@vitejs/plugin-react": "^3.1.0",
+    "@wyw-in-js/rollup": "0.5.5",
+    "@wyw-in-js/vite": "0.5.5",
     "babel-loader": "8.2.2",
     "babel-plugin-annotate-pure-calls": "0.4.0",
     "babel-plugin-styled-components": "1.13.2",
@@ -112,8 +112,8 @@
     "@floating-ui/dom": "1.6.10",
     "@floating-ui/react": "0.26.22",
     "@floating-ui/react-dom": "2.1.1",
-    "@linaria/core": "5.0.2",
-    "@linaria/react": "5.0.3",
+    "@linaria/core": "6.2.0",
+    "@linaria/react": "6.2.1",
     "@popperjs/core": "2.11.8",
     "@salutejs/input-core": "2.1.2",
     "@salutejs/plasma-core": "1.194.0",
