--- a/utils/plasma-tokens-utils/package.json
+++ b/utils/plasma-tokens-utils/package.json
@@ -31,11 +31,11 @@
   "devDependencies": {
     "@types/color": "^3.0.3",
     "@types/jest": "^26.0.20",
-    "@types/node": "^14.11.1",
+    "@types/node": "^22.13.13",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.3",
     "ts-node": "^9.1.1",
-    "typescript": "4.2.4"
+    "typescript": "^5.3.3"
   },
   "publishConfig": {
     "access": "public"
