--- a/packages/plasma-hope/package.json
+++ b/packages/plasma-hope/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-hope",
-  "version": "1.336.0",
+  "version": "1.337.0-dev.0",
   "description": "Salute Design System / Internal React UI kit for web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -58,7 +58,7 @@
     "@microsoft/api-extractor": "7.38.3",
     "@salutejs/plasma-colors": "0.15.0",
     "@salutejs/plasma-cy-utils": "0.125.0",
-    "@salutejs/plasma-icons": "1.214.0",
+    "@salutejs/plasma-icons": "1.215.0-dev.0",
     "@salutejs/plasma-sb-utils": "0.194.0",
     "@salutejs/plasma-tokens-b2b": "1.48.0",
     "@salutejs/plasma-tokens-b2c": "0.59.0",
