chore: Add ignore changes in themes packages to ci/cd [no ci]

--- a/.github/workflows/publish-common.yml
+++ b/.github/workflows/publish-common.yml
@@ -56,7 +56,9 @@ jobs:
         run: npm whoami && npx lerna info && npx auto info || echo 'auto info returned 1'
       
       - name: Create Release
-        run: npm run release -- ${{ inputs.auto-options }}
+        run: | 
+          git ls-files packages/themes/* | xargs git update-index --assume-unchanged
+          npm run release -- ${{ inputs.auto-options }}
       
       - name: Update package-lock files
         if: ${{ inputs.with-update-package-lock }}
