--- a/packages/plasma-b2c/package.json
+++ b/packages/plasma-b2c/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-b2c",
-  "version": "1.569.0-dev.0",
+  "version": "1.570.0-dev.0",
   "description": "Salute Design System / React UI kit for business-related web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -42,10 +42,10 @@
     "atLeast": 99.97
   },
   "dependencies": {
-    "@salutejs/plasma-core": "1.194.0",
-    "@salutejs/plasma-hope": "1.337.0-dev.0",
-    "@salutejs/plasma-new-hope": "0.313.0-dev.0",
-    "@salutejs/plasma-themes": "0.30.0",
+    "@salutejs/plasma-core": "1.195.0-dev.0",
+    "@salutejs/plasma-hope": "1.338.0-dev.0",
+    "@salutejs/plasma-new-hope": "0.314.0-dev.0",
+    "@salutejs/plasma-themes": "0.31.0-dev.0",
     "@salutejs/plasma-tokens-b2c": "0.59.0",
     "@salutejs/plasma-tokens-web": "1.64.0",
     "@salutejs/plasma-typo": "0.42.0"
@@ -71,9 +71,9 @@
     "@rollup/plugin-commonjs": "25.0.7",
     "@rollup/plugin-node-resolve": "15.2.3",
     "@salutejs/plasma-colors": "0.15.0",
-    "@salutejs/plasma-cy-utils": "0.125.0",
-    "@salutejs/plasma-icons": "1.215.0-dev.0",
-    "@salutejs/plasma-sb-utils": "0.194.0",
+    "@salutejs/plasma-cy-utils": "0.126.0-dev.0",
+    "@salutejs/plasma-icons": "1.216.0-dev.0",
+    "@salutejs/plasma-sb-utils": "0.195.0-dev.0",
     "@storybook/addon-docs": "7.6.17",
     "@storybook/addon-essentials": "7.6.17",
     "@storybook/addon-knobs": "7.0.2",
