--- a/packages/plasma-web/package.json
+++ b/packages/plasma-web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-web",
-  "version": "1.571.0-dev.0",
+  "version": "1.572.0-dev.0",
   "description": "Salute Design System / React UI kit for web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -19,10 +19,10 @@
     "directory": "packages/plasma-web"
   },
   "dependencies": {
-    "@salutejs/plasma-core": "1.194.0",
-    "@salutejs/plasma-hope": "1.337.0-dev.0",
-    "@salutejs/plasma-new-hope": "0.313.0-dev.0",
-    "@salutejs/plasma-themes": "0.30.0",
+    "@salutejs/plasma-core": "1.195.0-dev.0",
+    "@salutejs/plasma-hope": "1.338.0-dev.0",
+    "@salutejs/plasma-new-hope": "0.314.0-dev.0",
+    "@salutejs/plasma-themes": "0.31.0-dev.0",
     "@salutejs/plasma-tokens-b2b": "1.48.0",
     "@salutejs/plasma-tokens-b2c": "0.59.0",
     "@salutejs/plasma-tokens-web": "1.64.0",
@@ -49,9 +49,9 @@
     "@rollup/plugin-commonjs": "25.0.7",
     "@rollup/plugin-node-resolve": "15.2.3",
     "@salutejs/plasma-colors": "0.15.0",
-    "@salutejs/plasma-cy-utils": "0.125.0",
-    "@salutejs/plasma-icons": "1.215.0-dev.0",
-    "@salutejs/plasma-sb-utils": "0.194.0",
+    "@salutejs/plasma-cy-utils": "0.126.0-dev.0",
+    "@salutejs/plasma-icons": "1.216.0-dev.0",
+    "@salutejs/plasma-sb-utils": "0.195.0-dev.0",
     "@storybook/addon-docs": "7.6.17",
     "@storybook/addon-essentials": "7.6.17",
     "@storybook/addons": "7.6.17",
