--- a/packages/sdds-clfd-auto/package.json
+++ b/packages/sdds-clfd-auto/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-clfd-auto",
-  "version": "0.300.0-dev.0",
+  "version": "0.301.0-dev.0",
   "description": "Salute Design System / React UI kit for SDDS CLFD AUTO web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -31,8 +31,8 @@
     "directory": "packages/sdds-clfd-auto"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.313.0-dev.0",
-    "@salutejs/plasma-themes": "0.30.0"
+    "@salutejs/plasma-new-hope": "0.314.0-dev.0",
+    "@salutejs/plasma-themes": "0.31.0-dev.0"
   },
   "peerDependencies": {
     "react": ">=16.13.1",
@@ -55,10 +55,10 @@
     "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@salutejs/plasma-colors": "0.15.0",
-    "@salutejs/plasma-core": "1.194.0",
-    "@salutejs/plasma-cy-utils": "0.125.0",
-    "@salutejs/plasma-icons": "1.215.0-dev.0",
-    "@salutejs/plasma-sb-utils": "0.194.0",
+    "@salutejs/plasma-core": "1.195.0-dev.0",
+    "@salutejs/plasma-cy-utils": "0.126.0-dev.0",
+    "@salutejs/plasma-icons": "1.216.0-dev.0",
+    "@salutejs/plasma-sb-utils": "0.195.0-dev.0",
     "@storybook/addon-docs": "7.6.17",
     "@storybook/addon-essentials": "7.6.17",
     "@storybook/addons": "7.6.17",
