--- a/website/sdds-insol-docs/package.json
+++ b/website/sdds-insol-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-insol-docs",
-  "version": "0.290.0-dev.0",
+  "version": "0.291.0-dev.0",
   "description": "SDDS INSOL documentation",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -30,11 +30,11 @@
     "@docusaurus/preset-classic": "3.6.1",
     "@docusaurus/theme-live-codeblock": "3.6.1",
     "@mdx-js/react": "3.0.0",
-    "@salutejs/plasma-docs-ui": "0.482.0-dev.0",
-    "@salutejs/plasma-icons": "1.215.0-dev.0",
+    "@salutejs/plasma-docs-ui": "0.483.0-dev.0",
+    "@salutejs/plasma-icons": "1.216.0-dev.0",
     "@salutejs/plasma-typo": "0.42.0",
-    "@salutejs/sdds-insol": "0.296.0-dev.0",
-    "@salutejs/sdds-themes": "0.33.0",
+    "@salutejs/sdds-insol": "0.297.0-dev.0",
+    "@salutejs/sdds-themes": "0.34.0-dev.0",
     "@svgr/webpack": "8.1.0",
     "clsx": "^1.1.1",
     "file-loader": "^6.2.0",
