--- a/utils/plasma-cy-utils/package.json
+++ b/utils/plasma-cy-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-cy-utils",
-  "version": "0.126.0-dev.0",
+  "version": "0.126.0",
   "description": "Test helpers shared between ui libraries.",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "@cypress/react": "5.10.1",
-    "@salutejs/plasma-tokens": "1.111.0-dev.0",
+    "@salutejs/plasma-tokens": "1.111.0",
     "@salutejs/plasma-tokens-b2b": "1.48.0",
     "@salutejs/plasma-tokens-b2c": "0.59.0",
     "@salutejs/plasma-tokens-web": "1.64.0",
