feat(plasma): add absolute paths in plasma-new-hope

--- a/packages/plasma-new-hope/tsconfig.json
+++ b/packages/plasma-new-hope/tsconfig.json
@@ -35,7 +35,10 @@
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
         "outDir": "./",
-        "rootDir": "./src"
+        "rootDir": "./src",
+        "paths": {
+            "src/*": ["./src/*"]
+        }
     },
     "include": ["./src"],
     "exclude": ["./src/helpers", "./src/examples/", "./src/**/*.component-test.tsx"]
