feat(plasma): optimized imports in Select

--- a/packages/plasma-new-hope/package.json
+++ b/packages/plasma-new-hope/package.json
@@ -29,8 +29,8 @@
     "build:emotion:cjs": "rm -rf emotion/cjs && BABEL_ENV=cjs EMOTION=true SC_NAMESPACE=plasma-new-hope babel ./src-emotion --out-dir ./emotion/cjs --extensions .ts,.tsx --copy-files",
     "build:emotion:esm": "rm -rf emotion/es && BABEL_ENV=esm EMOTION=true SC_NAMESPACE=plasma-new-hope babel ./src-emotion --out-dir ./emotion/es --extensions .ts,.tsx --copy-files",
     "build:styled-components": "npm run build:styled-components:esm && npm run build:styled-components:cjs",
-    "build:styled-components:cjs": "rm -rf styled-components/cjs && BABEL_ENV=cjs SC_NAMESPACE=plasma-new-hope babel ./src-sc --out-dir ./styled-components/cjs --extensions .ts,.tsx --copy-files",
-    "build:styled-components:esm": "rm -rf styled-components/es && BABEL_ENV=esm SC_NAMESPACE=plasma-new-hope babel ./src-sc --out-dir ./styled-components/es --extensions .ts,.tsx --copy-files",
+    "build:styled-components:cjs": "rm -rf styled-components/cjs && BABEL_ENV=cjs SC=true SC_NAMESPACE=plasma-new-hope babel ./src-sc --out-dir ./styled-components/cjs --extensions .ts,.tsx --copy-files",
+    "build:styled-components:esm": "rm -rf styled-components/es && BABEL_ENV=esm SC=true SC_NAMESPACE=plasma-new-hope babel ./src-sc --out-dir ./styled-components/es --extensions .ts,.tsx --copy-files",
     "postbuild:styled-components": "rm -rf src-sc",
     "postbuild:emotion": "rm -rf src-emotion",
     "generate:typings:css": "tsc --outDir types --emitDeclarationOnly",
@@ -98,6 +98,7 @@
     "@vitejs/plugin-react": "^3.1.0",
     "babel-loader": "8.2.2",
     "babel-plugin-annotate-pure-calls": "0.4.0",
+    "babel-plugin-module-resolver": "5.0.2",
     "babel-plugin-styled-components": "1.13.2",
     "csstype": "3.1.3",
     "default-browser-id": "2.0.0",
