chore: how to use

--- a/packages/plasma-new-hope/tsconfig.json
+++ b/packages/plasma-new-hope/tsconfig.json
@@ -41,5 +41,5 @@
         }
     },
     "include": ["./src"],
-    "exclude": ["./src/helpers", "./src/examples/", "./src/**/*.component-test.tsx"]
+    "exclude": ["./src/helpers", "./src/examples/", "./src/**/*.component-test.tsx", "./src/**/*.stories.template.tsx"]
 }
