--- a/packages/plasma-b2c/package.json
+++ b/packages/plasma-b2c/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-b2c",
-  "version": "1.577.0",
+  "version": "1.578.0-dev.0",
   "description": "Salute Design System / React UI kit for business-related web applications.",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -43,9 +43,9 @@
   },
   "dependencies": {
     "@salutejs/plasma-core": "1.196.0",
-    "@salutejs/plasma-hope": "1.339.0",
-    "@salutejs/plasma-new-hope": "0.321.0",
-    "@salutejs/plasma-themes": "0.32.0",
+    "@salutejs/plasma-hope": "1.340.0-dev.0",
+    "@salutejs/plasma-new-hope": "0.322.0-dev.0",
+    "@salutejs/plasma-themes": "0.33.0-dev.0",
     "@salutejs/plasma-tokens-b2c": "0.59.0",
     "@salutejs/plasma-tokens-web": "1.64.0",
     "@salutejs/plasma-typo": "0.42.0"
@@ -73,7 +73,7 @@
     "@salutejs/plasma-colors": "0.15.0",
     "@salutejs/plasma-cy-utils": "0.127.0",
     "@salutejs/plasma-icons": "1.217.0",
-    "@salutejs/plasma-sb-utils": "0.196.0",
+    "@salutejs/plasma-sb-utils": "0.197.0-dev.0",
     "@storybook/addon-docs": "7.6.17",
     "@storybook/addon-essentials": "7.6.17",
     "@storybook/addon-knobs": "7.0.2",
