--- a/packages/plasma-hope/package.json
+++ b/packages/plasma-hope/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-hope",
-  "version": "1.339.0",
+  "version": "1.340.0-dev.0",
   "description": "Salute Design System / Internal React UI kit for web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -59,7 +59,7 @@
     "@salutejs/plasma-colors": "0.15.0",
     "@salutejs/plasma-cy-utils": "0.127.0",
     "@salutejs/plasma-icons": "1.217.0",
-    "@salutejs/plasma-sb-utils": "0.196.0",
+    "@salutejs/plasma-sb-utils": "0.197.0-dev.0",
     "@salutejs/plasma-tokens-b2b": "1.48.0",
     "@salutejs/plasma-tokens-b2c": "0.59.0",
     "@salutejs/plasma-tokens-web": "1.64.0",
