--- a/packages/plasma-ui/package.json
+++ b/packages/plasma-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-ui",
-  "version": "1.315.0",
+  "version": "1.316.0-dev.0",
   "description": "Salute Design System.",
   "main": "index.js",
   "module": "es/index.js",
@@ -35,7 +35,7 @@
     "@babel/preset-typescript": "7.24.1",
     "@salutejs/plasma-cy-utils": "0.127.0",
     "@salutejs/plasma-icons": "1.217.0",
-    "@salutejs/plasma-sb-utils": "0.196.0",
+    "@salutejs/plasma-sb-utils": "0.197.0-dev.0",
     "@salutejs/plasma-tokens": "1.111.0",
     "@salutejs/use-virtual": "2.0.0",
     "@storybook/addon-docs": "7.6.17",
