--- a/packages/sdds-clfd-auto/package.json
+++ b/packages/sdds-clfd-auto/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-clfd-auto",
-  "version": "0.308.0",
+  "version": "0.309.0-dev.0",
   "description": "Salute Design System / React UI kit for SDDS CLFD AUTO web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -31,8 +31,8 @@
     "directory": "packages/sdds-clfd-auto"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.321.0",
-    "@salutejs/plasma-themes": "0.32.0"
+    "@salutejs/plasma-new-hope": "0.322.0-dev.0",
+    "@salutejs/plasma-themes": "0.33.0-dev.0"
   },
   "peerDependencies": {
     "react": ">=16.13.1",
@@ -58,7 +58,7 @@
     "@salutejs/plasma-core": "1.196.0",
     "@salutejs/plasma-cy-utils": "0.127.0",
     "@salutejs/plasma-icons": "1.217.0",
-    "@salutejs/plasma-sb-utils": "0.196.0",
+    "@salutejs/plasma-sb-utils": "0.197.0-dev.0",
     "@storybook/addon-docs": "7.6.17",
     "@storybook/addon-essentials": "7.6.17",
     "@storybook/addons": "7.6.17",
