--- a/website/plasma-website/package.json
+++ b/website/plasma-website/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-website",
-  "version": "0.541.0",
+  "version": "0.542.0-dev.0",
   "description": "Plasma Main App",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -19,7 +19,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@salutejs/plasma-b2c": "1.577.0",
+    "@salutejs/plasma-b2c": "1.578.0-dev.0",
     "@salutejs/plasma-colors": "0.15.0",
     "@salutejs/plasma-icons": "1.217.0",
     "@salutejs/plasma-tokens": "1.111.0",
