--- a/website/sdds-finportal-docs/package.json
+++ b/website/sdds-finportal-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-finportal-docs",
-  "version": "0.1.0",
+  "version": "0.2.0-dev.0",
   "description": "SDDS-FINPORTAL documentation",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -30,11 +30,11 @@
     "@docusaurus/preset-classic": "3.6.1",
     "@docusaurus/theme-live-codeblock": "3.6.1",
     "@mdx-js/react": "3.0.0",
-    "@salutejs/plasma-docs-ui": "0.490.0",
+    "@salutejs/plasma-docs-ui": "0.491.0-dev.0",
     "@salutejs/plasma-icons": "1.217.0",
     "@salutejs/plasma-typo": "0.42.0",
-    "@salutejs/sdds-finportal": "0.300.0",
-    "@salutejs/sdds-themes": "0.35.0",
+    "@salutejs/sdds-finportal": "0.301.0-dev.0",
+    "@salutejs/sdds-themes": "0.36.0-dev.0",
     "@svgr/webpack": "8.1.0",
     "clsx": "1.1.1",
     "file-loader": "6.2.0",
