ci(sdds-crm): init package

--- a/.github/config-ci.json
+++ b/.github/config-ci.json
@@ -11,6 +11,7 @@
         "sdds-cs",
         "sdds-finportal",
         "sdds-insol",
-        "plasma-giga"
+        "plasma-giga",
+        "sdds-crm"
     ]
 }
