ci(sdds-scan): init package

--- a/.github/config-ci.json
+++ b/.github/config-ci.json
@@ -13,6 +13,7 @@
         "sdds-finportal",
         "sdds-insol",
         "sdds-crm",
-        "sdds-netology"
+        "sdds-netology",
+        "sdds-scan"
     ]
 }
