--- a/packages/plasma-web/package.json
+++ b/packages/plasma-web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/plasma-web",
-  "version": "1.582.0-dev.0",
+  "version": "1.583.0-dev.0",
   "description": "Salute Design System / React UI kit for web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -20,8 +20,8 @@
   },
   "dependencies": {
     "@salutejs/plasma-core": "1.197.0-dev.0",
-    "@salutejs/plasma-hope": "1.341.0-dev.0",
-    "@salutejs/plasma-new-hope": "0.324.0-dev.0",
+    "@salutejs/plasma-hope": "1.342.0-dev.0",
+    "@salutejs/plasma-new-hope": "0.325.0-dev.0",
     "@salutejs/plasma-themes": "0.33.0",
     "@salutejs/plasma-tokens-b2b": "1.49.0-dev.0",
     "@salutejs/plasma-tokens-b2c": "0.60.0-dev.0",
@@ -50,7 +50,7 @@
     "@rollup/plugin-node-resolve": "15.2.3",
     "@salutejs/plasma-colors": "0.15.0",
     "@salutejs/plasma-cy-utils": "0.128.0-dev.0",
-    "@salutejs/plasma-icons": "1.217.0",
+    "@salutejs/plasma-icons": "1.218.0-dev.0",
     "@salutejs/plasma-sb-utils": "0.198.0-dev.0",
     "@storybook/addon-docs": "7.6.17",
     "@storybook/addon-essentials": "7.6.17",
