--- a/packages/sdds-crm/package.json
+++ b/packages/sdds-crm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-crm",
-  "version": "0.311.0-dev.0",
+  "version": "0.312.0-dev.0",
   "description": "Salute Design System / React UI kit for SDDS CRM web applications",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -30,7 +30,7 @@
     "directory": "packages/sdds-crm"
   },
   "dependencies": {
-    "@salutejs/plasma-new-hope": "0.324.0-dev.0",
+    "@salutejs/plasma-new-hope": "0.325.0-dev.0",
     "@salutejs/sdds-themes": "0.37.0-dev.0"
   },
   "peerDependencies": {
@@ -57,7 +57,7 @@
     "@salutejs/plasma-colors": "0.15.0",
     "@salutejs/plasma-core": "1.197.0-dev.0",
     "@salutejs/plasma-cy-utils": "0.128.0-dev.0",
-    "@salutejs/plasma-icons": "1.217.0",
+    "@salutejs/plasma-icons": "1.218.0-dev.0",
     "@salutejs/plasma-sb-utils": "0.198.0-dev.0",
     "@storybook/addon-docs": "7.6.17",
     "@storybook/addon-essentials": "7.6.17",
