--- a/website/sdds-crm-docs/package.json
+++ b/website/sdds-crm-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salutejs/sdds-crm-docs",
-  "version": "0.2.0-dev.0",
+  "version": "0.3.0-dev.0",
   "description": "SDDS-CRM documentation",
   "author": "Salute Frontend Team <salute.developers@gmail.com>",
   "license": "MIT",
@@ -30,8 +30,8 @@
     "@docusaurus/preset-classic": "3.6.1",
     "@docusaurus/theme-live-codeblock": "3.6.1",
     "@mdx-js/react": "3.0.0",
-    "@salutejs/plasma-docs-ui": "0.493.0-dev.0",
-    "@salutejs/plasma-icons": "1.217.0",
+    "@salutejs/plasma-docs-ui": "0.494.0-dev.0",
+    "@salutejs/plasma-icons": "1.218.0-dev.0",
     "@salutejs/plasma-typo": "0.42.0",
     "@svgr/webpack": "8.1.0",
     "clsx": "^1.1.1",
@@ -42,7 +42,7 @@
     "styled-components": "5.3.1",
     "url-loader": "^4.1.1",
     "react-hook-form": "7.53.0",
-    "@salutejs/sdds-crm": "0.311.0-dev.0",
+    "@salutejs/sdds-crm": "0.312.0-dev.0",
     "@salutejs/sdds-themes": "0.37.0-dev.0"
   },
   "devDependencies": {
