feat(plasma-cy-utils): update Cypress to 10.11.0

--- a/utils/plasma-cy-utils/tsconfig.json
+++ b/utils/plasma-cy-utils/tsconfig.json
@@ -5,9 +5,9 @@
         "lib": ["dom", "dom.iterable", "esnext"],
         "jsx": "react",
         "declaration": true,
-        "declarationMap": true,
-        "sourceMap": true,
         "importHelpers": false,
+        "typeRoots": ["node_modules/@types"],
+        "types": ["node"],
 
         /* Strict Type-Checking Options */
         "strict": true,
@@ -35,5 +35,7 @@
         "forceConsistentCasingInFileNames": true,
         "outDir": "./lib",
         "rootDir": "./src"
-    }
+    },
+    "include": ["./src"],
+    "exclude": ["node_modules/*", "./lib"]
 }
