--- a/utils/plasma-cy-utils/package.json
+++ b/utils/plasma-cy-utils/package.json
@@ -14,9 +14,8 @@
   "scripts": {
     "prepare": "npm run build",
     "prebuild": "npm run clean",
-    "build": "tsc",
+    "build": "tsc --project ./tsconfig.json",
     "clean": "rm -rf lib",
-    "typescript-coverage": "npx typescript-coverage-report > /dev/null",
     "lint": "../../node_modules/.bin/eslint ./src --ext .ts,.tsx --quiet"
   },
   "peerDependencies": {
@@ -25,27 +24,20 @@
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
-    "@cypress/react": "5.10.1",
+    "@cypress/react": "5.12.0",
     "@salutejs/plasma-tokens": "1.112.0",
     "@salutejs/plasma-tokens-b2b": "1.49.0",
     "@salutejs/plasma-tokens-b2c": "0.60.0",
     "@salutejs/plasma-tokens-web": "1.64.0",
     "@salutejs/plasma-typo": "0.42.0",
+    "@types/node": "22.15.29",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@types/styled-components": "5.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "5.3.1",
-    "typescript": "4.0.8",
-    "typescript-coverage-report": "0.7.0"
-  },
-  "typeCoverage": {
-    "ignoreFiles": [
-      "src/**/*component-test.tsx",
-      "src/**/*stories.tsx"
-    ],
-    "atLeast": 100
+    "styled-components": "5.1.1",
+    "typescript": "5.6.3"
   },
   "publishConfig": {
     "access": "public"
