chore: update Cypress to 13.17.0

--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "release": "npm run git:diff && auto shipit -v",
     "precy:run-ct": "rm -rf {.nyc_output}",
     "cy:clean": "rm -rf cypress/{results,reports,screenshots,videos}",
-    "cy:accept-diffs": "docker run -it --rm -v $PWD:/e2e -w /e2e -e CYPRESS_updateSnapshots=true -e CYPRESS_BASE_URL=${PUBLIC_URL:-'http://host.docker.internal:6006'} cypress/included:10.11.0 run --browser chrome",
-    "cy:run": "docker run -it --rm -v $PWD:/e2e -w /e2e -e CYPRESS_BASE_URL=${PUBLIC_URL:-'http://host.docker.internal:6006'} cypress/included:10.11.0 run --browser chrome",
+    "cy:accept-diffs": "docker run -it --rm -v $PWD:/e2e -w /e2e -e CYPRESS_updateSnapshots=true -e CYPRESS_BASE_URL=${PUBLIC_URL:-'http://host.docker.internal:6006'} cypress/included:13.17.0 run --browser chrome",
+    "cy:run": "docker run -it --rm -v $PWD:/e2e -w /e2e -e CYPRESS_BASE_URL=${PUBLIC_URL:-'http://host.docker.internal:6006'} cypress/included:13.17.0 run --browser chrome",
     "cy:open": "cypress open",
-    "cy:get-image": "echo younggod/cypress$(if [[ $(uname -a) == *\"ARM64\"* ]]; then echo \"-m\"; fi):10.11.0",
+    "cy:get-image": "echo younggod/cypress-13$(if [[ $(uname -a) == *\"ARM64\"* ]]; then echo \"-m\"; fi):13.17.0",
     "cy:run-ct": "CYPRESS_IMAGE=$(npm run cy:get-image | tail -1) && docker run --rm -v $PWD:/e2e -w /e2e --entrypoint=/bin/bash -e CYPRESS_CONFIG_FILE='cypress.config.ts' -e PACKAGE_NAME=$PACKAGE_NAME -e COMPONENTS=$COMPONENTS -e RETRIES=$RETRIES -e COVERAGE_DIR=cypress/${PACKAGE_NAME}-coverage -e COVERAGE=true -e CYPRESS_updateSnapshots=$CYPRESS_updateSnapshots ${CYPRESS_IMAGE} -c 'node ./actions/platform-test/lib/index.js --config $CYPRESS_CONFIG_FILE --command run-ct'",
     "cy:b2c:run-ct": "PACKAGE_NAME=plasma-b2c COMPONENTS=$npm_config_components npm run cy:run-ct",
     "cy:web:run-ct": "PACKAGE_NAME=plasma-web COMPONENTS=$npm_config_components npm run cy:run-ct",
@@ -87,7 +87,7 @@
     "chalk": "4.1.2",
     "commander": "10.0.0",
     "css-loader": "7.1.2",
-    "cypress": "10.11.0",
+    "cypress": "13.17.0",
     "cypress-axe": "0.13.0",
     "cypress-file-upload": "5.0.8",
     "cypress-image-snapshot": "4.0.1",
