--- a/package.json
+++ b/package.json
@@ -28,6 +28,12 @@
     "cy:b2c:run-ct:m-r": "PACKAGE_NAME=plasma-b2c SPEC_GROUP='[M-R]' npm run cy:run-ct",
     "cy:b2c:run-ct:s-z": "PACKAGE_NAME=plasma-b2c SPEC_GROUP='[S-Z]' npm run cy:run-ct",
     
+    "cy:giga:run-ct": "PACKAGE_NAME=plasma-giga COMPONENTS=$npm_config_components npm run cy:run-ct",
+    "cy:giga:run-ct:a-d": "PACKAGE_NAME=plasma-giga SPEC_GROUP='[A-D]' npm run cy:run-ct",
+    "cy:giga:run-ct:e-l": "PACKAGE_NAME=plasma-giga SPEC_GROUP='[E-L]' npm run cy:run-ct",
+    "cy:giga:run-ct:m-r": "PACKAGE_NAME=plasma-giga SPEC_GROUP='[M-R]' npm run cy:run-ct",
+    "cy:giga:run-ct:s-z": "PACKAGE_NAME=plasma-giga SPEC_GROUP='[S-Z]' npm run cy:run-ct",
+    
     "cy:web:run-ct": "PACKAGE_NAME=plasma-web COMPONENTS=$npm_config_components npm run cy:run-ct",
     "cy:web:run-ct:a-d": "PACKAGE_NAME=plasma-web SPEC_GROUP='[A-D]' npm run cy:run-ct",
     "cy:web:run-ct:e-l": "PACKAGE_NAME=plasma-web SPEC_GROUP='[E-L]' npm run cy:run-ct",
@@ -41,13 +47,17 @@
     "cy:ui:run-ct:s-z": "PACKAGE_NAME=plasma-ui SPEC_GROUP='[S-Z]' npm run cy:run-ct",
     
     "cy:b2c:run-ct-update-diffs": "PACKAGE_NAME=plasma-b2c COMPONENTS=$npm_config_components CYPRESS_updateSnapshots=true npm run cy:run-ct",
+    "cy:giga:run-ct-update-diffs": "PACKAGE_NAME=plasma-giga COMPONENTS=$npm_config_components CYPRESS_updateSnapshots=true npm run cy:run-ct",
     "cy:web:run-ct-update-diffs": "PACKAGE_NAME=plasma-web COMPONENTS=$npm_config_components CYPRESS_updateSnapshots=true npm run cy:run-ct",
     "cy:ui:run-ct-update-diffs": "PACKAGE_NAME=plasma-ui COMPONENTS=$npm_config_components RETRIES=3 CYPRESS_updateSnapshots=true npm run cy:run-ct",
     
     "cy:ui:open-ct": "PACKAGE_DIR=packages/plasma-ui node actions/platform-test/lib/index.js --config cypress/config/ui-config.json --command open-ct --env failOnSnapshotDiff=false",
     "cy:web:open-ct": "PACKAGE_NAME=plasma-web node actions/platform-test/lib/index.js --config cypress.config.ts --command open-ct --env failOnSnapshotDiff=false",
+    "cy:giga:open-ct": "PACKAGE_NAME=plasma-giga node actions/platform-test/lib/index.js --config cypress.config.ts --command open-ct --env failOnSnapshotDiff=false",
     "cy:b2c:open-ct": "PACKAGE_NAME=plasma-b2c node actions/platform-test/lib/index.js --config cypress.config.ts --command open-ct --env failOnSnapshotDiff=false",
+
     "cy:report:coverage": "nyc report --reporter=cobertura --reporter=html",
+    
     "extract-docgen-info": "lerna run extract-docgen-info",
     "lint:scripts": "eslint ./scripts ./auto-plugins/src --ext .js,.ts --quiet",
     "lint:packages": "./scripts/lint-packages.js",
