--- a/packages/plasma-giga/package.json
+++ b/packages/plasma-giga/package.json
@@ -32,7 +32,8 @@
   },
   "dependencies": {
     "@salutejs/plasma-new-hope": "0.326.0",
-    "@salutejs/plasma-themes": "0.34.0"
+    "@salutejs/plasma-themes": "0.34.0",
+    "@salutejs/plasma-typo": "0.42.0"
   },
   "peerDependencies": {
     "react": ">=16.13.1",
